--- a/helm/charts/besu-genesis/templates/genesis-job-cleanup.yaml
+++ b/helm/charts/besu-genesis/templates/genesis-job-cleanup.yaml
@@ -37,7 +37,7 @@ spec:
 {{- else if and (eq .Values.cluster.provider "aws") (.Values.cluster.cloudNativeServices) }}
       serviceAccountName: {{ .Values.aws.serviceAccountName }}
 {{- else }}
-      serviceAccountName: {{ .Values.azure.serviceAccountName}}-sa
+      serviceAccountName: {{ include "besu-genesis.name" . }}-sa
 {{- end }}       
       restartPolicy: "Never"
       containers:
@@ -54,8 +54,8 @@ spec:
 
 {{- if .Values.quorumFlags.removeGenesisOnDelete }}
 
-              echo "Deleting genesis configmap in k8s ..."
-              kubectl delete configmap --namespace {{ .Release.Namespace }} besu-genesis
+              echo "Deleting genesis secret in k8s ..."
+              kubectl delete secret --namespace {{ .Release.Namespace }} besu-genesis
 
               echo "Deleting node-enodes configmap in k8s ..."
               kubectl delete configmap --namespace {{ .Release.Namespace }} besu-peers
