--- a/helm/charts/besu-genesis/templates/genesis-job-init.yaml
+++ b/helm/charts/besu-genesis/templates/genesis-job-init.yaml
@@ -36,7 +36,7 @@ spec:
 {{- else if and (eq .Values.cluster.provider "aws") (.Values.cluster.cloudNativeServices) }}
       serviceAccountName: {{ .Values.aws.serviceAccountName }}
 {{- else }}
-      serviceAccountName: {{ .Values.azure.serviceAccountName}}-sa
+      serviceAccountName: {{ include "besu-genesis.name" . }}-sa
 {{- end }}
       restartPolicy: "Never"
       containers:
@@ -100,11 +100,11 @@ spec:
                 fi
               }
 
-              function safeWriteGenesisConfigmap {
+              function safeWriteGenesisSecret {
                 FOLDER_PATH=$1
-                kubectl get configmap --namespace {{ .Release.Namespace }} besu-genesis
+                kubectl get secret --namespace {{ .Release.Namespace }} besu-genesis
                 if [ $? -ne 0 ]; then
-                  kubectl create configmap --namespace {{ .Release.Namespace }} besu-genesis --from-file=genesis.json=$FOLDER_PATH/besu/genesis.json
+                  kubectl create secret generic --namespace {{ .Release.Namespace }} besu-genesis --from-file=genesis.json=$FOLDER_PATH/besu/genesis.json
                 fi
               }
 
@@ -116,8 +116,8 @@ spec:
               kubectl create configmap --namespace {{ .Release.Namespace }} besu-bootnodes --from-file=bootnodes=/tmp/besu-bootnodes
 
               echo $FOLDER_PATH
-              echo "Creating genesis configmap in k8s ..."
-              safeWriteGenesisConfigmap $FOLDER_PATH
+              echo "Creating genesis secret in k8s ..."
+              safeWriteGenesisSecret $FOLDER_PATH
 
               # create the static-nodes with proper dns names for the quorum nodes
               echo "[" > $FOLDER_PATH/static-nodes.json
