--- a/helm/charts/besu-node/templates/node-service.yaml
+++ b/helm/charts/besu-node/templates/node-service.yaml
@@ -12,7 +12,7 @@ metadata:
     app.kubernetes.io/managed-by: helm    
   namespace: {{ .Release.Namespace }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   selector:
     app.kubernetes.io/part-of: {{ include "besu-node.fullname" . }}
     app.kubernetes.io/namespace: {{ .Release.Namespace }}
