chore(besu,blockscout): update to align with current infra setup
BESU
- change storageClassName to use `csi-disk-topology-retain`
- adjust resources allocation such as cpu, memory and storage
- set `FAST` mode to be default sync-mode
- update besu version to stable (`24.1.2`)
- implement scheduling strategy with `affinity` and `topologySpreadConstraints`
- templated besu config `tx-pool`
- add `fast-sync-min-peers`
- add combined service and custom labels for rpc node
- add new `values.yaml` files for each components
- add rpc ingress

BLOCKSCOUT
- add new configs

--- a/helm/charts/besu-node/templates/besu-config-configmap.yaml
+++ b/helm/charts/besu-node/templates/besu-config-configmap.yaml
@@ -26,9 +26,6 @@ data:
     logging={{ .Values.node.besu.logging | quote }}
     node-private-key-file={{.Values.node.besu.privateKeyPath | quote }}
 
-    # Transaction Pool
-    tx-pool="{{ .Values.node.besu.txPool.type }}"
-
     {{ if  .Values.node.besu.p2p.enabled -}}
     # P2P network
     p2p-enabled={{ .Values.node.besu.p2p.enabled }}
@@ -113,4 +110,10 @@ data:
     metrics-push-port={{ .Values.node.besu.metricsPush.port }}
     metrics-push-interval={{ .Values.node.besu.metricsPush.interval }}
     metrics-push-prometheus-job={{ .Values.node.besu.metricsPush.prometheusJob | quote }}
+    {{ end }}
+
+    sync-mode={{ .Values.node.besu.sync.mode | quote }}
+
+    {{ if eq .Values.node.besu.sync.mode "FAST" }}
+    fast-sync-min-peers=1
     {{ end }}
