--- a/helm/charts/besu-node/templates/node-service.yaml
+++ b/helm/charts/besu-node/templates/node-service.yaml
@@ -1,3 +1,46 @@
+{{- if (and (eq .Values.node.besu.customLabels.nodeType "rpc") (ne .Release.Name "rpc-2")) }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/component: service
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: besu-node-rpc
+    app.kubernetes.io/namespace: besu
+  name: besu-node-rpc
+  namespace: besu
+spec:
+  ports:
+  - name: json-rpc
+    port: 8545
+    protocol: TCP
+    targetPort: json-rpc
+  - name: ws
+    port: 8546
+    protocol: TCP
+    targetPort: ws
+  - name: graphql
+    port: 8547
+    protocol: TCP
+    targetPort: graphql
+  - name: rlpx
+    port: 30303
+    protocol: TCP
+    targetPort: rlpx
+  - name: discovery
+    port: 30303
+    protocol: UDP
+    targetPort: discovery
+  - name: metrics
+    port: 9545
+    protocol: TCP
+    targetPort: metrics
+  selector:
+    app.kubernetes.io/namespace: besu
+    nodeType: rpc
+  type: ClusterIP
+{{- end }}
 ---
 apiVersion: v1
 kind: Service
