--- a/helm/charts/besu-node/values.yaml
+++ b/helm/charts/besu-node/values.yaml
@@ -31,7 +31,7 @@ azure:
 storage:
   sizeLimit: "20Gi"
   pvcSizeLimit: "20Gi"
-  storageClassName: "csi-disk-topology"
+  storageClassName: "csi-disk-topology-retain"
   # NOTE: when you set this to Retain, the volume WILL persist after the chart is delete and you need to manually delete it
   reclaimPolicy: "Delete" # choose from: Delete | Retain 
   aws:
@@ -52,7 +52,7 @@ node:
       cpuLimit: 0.7
       cpuRequest: 0.1
       memLimit: "2G"
-      memRequest: "1G"
+      memRequest: "500Mi"
     # privKey:
     # pubKey:
     dataPath: "/data/besu"
@@ -91,8 +91,6 @@ node:
       host: "0.0.0.0"
       port: 8547
       corsOrigins: '["all"]'
-    txPool:
-      type: "sequenced"
     http:
       allowlist: '["*"]'
     metrics:
@@ -107,6 +105,8 @@ node:
       port: 9091
       interval: 15
       prometheusJob: "besu"
+    sync:
+      mode: "FAST"
     privacy:
       url: "http://localhost:9101"
       pubkeysPath: "/tessera"
@@ -147,7 +147,7 @@ node:
 image:
   besu:
     repository: hyperledger/besu
-    tag: 24.2.0
+    tag: 24.1.2
     pullPolicy: IfNotPresent
   tessera:
     repository: quorumengineering/tessera
@@ -160,3 +160,9 @@ image:
 
 service:
   type: ClusterIP
+
+affinity:
+  zone: []
+
+ingress:
+  enabled: false
