--- a/helm/values/genesis-besu.yml
+++ b/helm/values/genesis-besu.yml
@@ -1,6 +1,6 @@
 ---
 quorumFlags:
-  removeGenesisOnDelete: true
+  removeGenesisOnDelete: false
 
 cluster:
   provider: local  # choose from: local | aws | azure
@@ -13,8 +13,8 @@ rawGenesisConfig:
     config:
       chainId: 1337
       algorithm:
-        consensus: ibft2 # choose from: ibft2 | qbft | clique
-        blockperiodseconds: 2
+        consensus: qbft # choose from: ibft2 | qbft | clique
+        blockperiodseconds: 3
         epochlength: 30000
         requesttimeoutseconds: 20
     gasLimit: '0x47b760'
@@ -24,5 +24,5 @@ rawGenesisConfig:
   blockchain:
     nodes:
       generate: true
-      count: 4
+      count: 5
     accountPassword: 'password'
