--- a/helm/charts/besu-node/templates/besu-config-secret.yaml
+++ b/helm/charts/besu-node/templates/besu-config-secret.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.node.besu.rpc.authenticationEnabled }}
+{{ if and (.Values.node.besu.rpc.authenticationEnabled) (eq .Values.node.besu.rpc.type "userpass") }}
 apiVersion: v1
 kind: Secret
 metadata:
