--- a/helm/values/blockscout.yml
+++ b/helm/values/blockscout.yml
@@ -19,7 +19,7 @@ frontend:
     NEXT_PUBLIC_APP_HOST: "blockscout.abc-dev.network"
     NEXT_PUBLIC_APP_PORT: "443"
     NEXT_PUBLIC_IS_TESTNET: "true"
-    NEXT_PUBLIC_NETWORK_ID: 1337
+    NEXT_PUBLIC_NETWORK_ID: 9988
     NEXT_PUBLIC_NETWORK_NAME: "ABC BAAS"
     NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE: "validation"
     NEXT_PUBLIC_STATS_API_HOST: "http://blockscout-blockscout-stack-stats-svc.blockscout.svc.cluster.local"
@@ -33,8 +33,8 @@ blockscout:
       konghq.com/strip-path: "false"
     hostname: "api-blockscout.abc-dev.network"
   env:
-    DATABASE_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.hwc-internal.abc-dev.network:5432/blockscout"
-    DATABASE_READ_ONLY_API_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.hwc-internal.abc-dev.network:5432/blockscout"
+    DATABASE_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.in.abc-dev.network:5432/blockscout"
+    DATABASE_READ_ONLY_API_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.in.abc-dev.network:5432/blockscout"
     ETHEREUM_JSONRPC_VARIANT: "besu"
     ETHEREUM_JSONRPC_HTTP_INSECURE: "true"
     ETHEREUM_JSONRPC_HTTP_URL: "http://besu-node-archive-1.besu.svc.cluster.local:8545"
@@ -58,6 +58,6 @@ stats:
   image:
     tag: "v1.5.1"
   env:
-    STATS__BLOCKSCOUT_DB_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.hwc-internal.abc-dev.network:5432/blockscout"
-    STATS__DB_URL: "postgresql://blockscout-stats:AhVu9185K1hliFgp@rds.hwc-internal.abc-dev.network:5432/blockscout-stats"
+    STATS__BLOCKSCOUT_DB_URL: "postgresql://blockscout:B3SUbl0cksc0ut@rds.in.abc-dev.network:5432/blockscout"
+    STATS__DB_URL: "postgresql://blockscout-stats:AhVu9185K1hliFgp@rds.in.abc-dev.network:5432/blockscout-stats"
     STATS__RUN_MIGRATIONS: "true"
