--- a/helm/values/genesis-besu.yml
+++ b/helm/values/genesis-besu.yml
@@ -11,18 +11,18 @@ cluster:
 rawGenesisConfig:
   genesis:
     config:
-      chainId: 1337
+      chainId: 9988
       algorithm:
         consensus: qbft # choose from: ibft2 | qbft | clique
         blockperiodseconds: 3
         epochlength: 30000
-        requesttimeoutseconds: 20
-    gasLimit: '0x47b760'
+        requesttimeoutseconds: 6
+    gasLimit: '0x2fefd800'
     difficulty: '0x1'
     coinbase: '0x0000000000000000000000000000000000000000'
     includeQuickStartAccounts: false # set to true if you would like to use the quorum-dev-quickstart test accounts. This setting will be forced false if cloudNativeServices is set to true which is assuming a prod environment
   blockchain:
     nodes:
       generate: true
-      count: 5
+      count: 1
     accountPassword: 'password'
