--- a/helm/charts/besu-node/templates/node-statefulset.yaml
+++ b/helm/charts/besu-node/templates/node-statefulset.yaml
@@ -292,7 +292,8 @@ spec:
               --min-gas-price=0 \
               --tx-pool-min-gas-price=0 \
               --tx-pool=sequenced \
-              --tx-pool-limit-by-account-percentage=1.0
+              --tx-pool-limit-by-account-percentage=1.0 \
+              --data-storage-format=FOREST
         livenessProbe:
           httpGet:
             path: /liveness
