chore(eso): add besu secrets

--- a/external-secrets/prod/externalsecret.yaml
+++ b/external-secrets/prod/externalsecret.yaml
@@ -137,23 +137,6 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: besu-rpc-3-key
-  namespace: besu
-spec:
-  refreshInterval: "600s"
-  secretStoreRef:
-    name: vault-secretstore
-    kind: SecretStore
-  target:
-    name: besu-node-rpc-3-keys
-    creationPolicy: Owner
-  dataFrom:
-    - extract:
-        key: besu/rpc-3
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
   name: besu-validator-1-key
   namespace: besu
 spec:
@@ -235,3 +218,20 @@ spec:
   dataFrom:
     - extract:
         key: besu/validator-5
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: besu-validator-6-key
+  namespace: besu
+spec:
+  refreshInterval: "600s"
+  secretStoreRef:
+    name: vault-secretstore
+    kind: SecretStore
+  target:
+    name: besu-node-validator-6-keys
+    creationPolicy: Owner
+  dataFrom:
+    - extract:
+        key: besu/validator-6
