--- a/external-secrets/prod/secretstore.yaml
+++ b/external-secrets/prod/secretstore.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault.hwc-internal.abc-dev.network"
+      server: "http://vault.in.ascendbit.network"
       path: "secret"
       version: "v2"
       auth:
         appRole:
           path: approle
-          roleId: 9112c575-b560-cea5-288c-aaf65916b538
+          roleId: b63867c8-c5aa-e19a-b4aa-5f4bce0f21e9
           secretRef:
             name: vault-token
             key: APPROLE_SECRET_ID
@@ -23,4 +23,4 @@ metadata:
   name: vault-token
   namespace: besu
 stringData:
-  APPROLE_SECRET_ID: 2760352d-ef2c-3a7c-896f-2e79c30b3f17
+  APPROLE_SECRET_ID: 8ff1284f-5b12-d7b3-0226-27f4e5c38014
