--- a/helm/values/blockscout-prod.yml
+++ b/helm/values/blockscout-prod.yml
@@ -18,7 +18,7 @@ frontend:
     NEXT_PUBLIC_API_PORT: "443"
     NEXT_PUBLIC_APP_HOST: "blockscout.ascendbit.network"
     NEXT_PUBLIC_APP_PORT: "443"
-    NEXT_PUBLIC_IS_TESTNET: "true"
+    NEXT_PUBLIC_IS_TESTNET: "false"
     NEXT_PUBLIC_NETWORK_ID: 9988
     NEXT_PUBLIC_NETWORK_NAME: "ABC BAAS"
     NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE: "validation"
