--- a/helm/values/prod/archive-1.yml
+++ b/helm/values/prod/archive-1.yml
@@ -15,6 +15,11 @@ cluster:
 
 node:
   besu:
+    resources:
+      cpuLimit: "1500m"
+      cpuRequest: "100m"
+      memLimit: "2G"
+      memRequest: "500Mi"
     customLabels:
       nodeType: archive
     metrics:
