--- a/helm/values/prod/bootnode-3.yml
+++ b/helm/values/prod/bootnode-3.yml
@@ -15,7 +15,12 @@ cluster:
 
 node:
   besu:
-    envBesuOpts: "-XX:MaxRAMPercentage=50.0 -XX:MinRAMPercentage=50.0 -XX:InitialRAMPercentage=50.0"
+    envBesuOpts: ""
+    resources:
+      cpuLimit: "1001m"
+      cpuRequest: "100m"
+      memLimit: "2G"
+      memRequest: "500Mi"
     metrics:
       serviceMonitorEnabled: false
     customLabels:
